# MRS-Digital-Phantom

./: .gitignore  Demo_MRS_Phantom.ipynb  DigitalPhantom.py  LICENSE.md  README.md  computation_test.ipynb  config.json  create_examples.ipynb  create_figures.ipynb  main.py  pyproject.toml  visualize_mrsi.ipynb
data/MRiLab/Original/: info.txt
data/invivo/derivatives/: LogFile.txt  QM_processed_spectra.tsv
data/invivo/derivatives/QuantifyResults/: A_amplMets_Voxel_1_Basis_1.tsv  A_rawWaterScaled_Voxel_1_Basis_1.json  A_rawWaterScaled_Voxel_1_Basis_1.tsv  A_tCr_Voxel_1_Basis_1.json  A_tCr_Voxel_1_Basis_1.tsv
data/macromolecules/: mm_params.json  mm_params_biggaba_v2.json
data/metabolites/: MRS_Database.xlsx  concs_df.csv  metab_df.csv  metab_df_biggaba.csv  metab_df_biggaba_no_std.csv  metab_df_biggaba_no_std_NAAG.csv  t2_df.csv
data/skeletons/BigBrainMR/: README.md
gui/: controller.py  defaults.py  main_gui.py  main_voxel_selector.py  widgets.py  worker.py
installation/: install_conda.sh  install_pip.sh
loading/: lcmodel.py  loadBasis.py  load_skeleton.py
notebooks/: analysis.ipynb  generate_data.ipynb  plot_variations.ipynb
outputs/simulation_20250620_3pye/: config.json
outputs/simulation_20250620_3pye/derivatives/: LogFile.txt  QM_processed_spectra.json  QM_processed_spectra.tsv
outputs/simulation_20250620_3pye/derivatives/QuantifyResults/: A_amplMets_Voxel_1_Basis_1.json  A_amplMets_Voxel_1_Basis_1.tsv  A_tCr_Voxel_1_Basis_1.tsv
outputs/simulation_20250620_3pye/spectra/simulated_spectrum_103/: sim_params.json
outputs/simulation_20250620_3pye/spectra/simulated_spectrum_13/: sim_params.json
outputs/simulation_20250620_3pye/spectra/simulated_spectrum_136/: sim_params.json
outputs/simulation_var_lipid/: config.json
outputs/simulation_var_noise/: config.json
outputs/simulation_var_shim/: config.json
outputs/simulation_var_water/: config.json
preprocessing/: preprocess_df.py  preprocess_phantom.py
simulation/: basis.py  mrs_phantom.py  run_matlab.py  signalModel.py  signalModels.py  simulate_mms.py  simulation.py
simulation/basissets/MRSCloud-main/: simMRS.json
simulation/lipids/SimnTG/: create_lipids.m  create_sys.m  test_lipids.m
simulation/macromolecules/: BlochSimulation.m  SumMM3T.fig  applyRelaxation.m  applyRotation.m  bloch_simulation.py  exptDatSum.mat  fSLR.m  simulate_mm.py
simulation/water/: water_sim.py
utils/: auxillary.py  definitions.py  loading.py  nii_processing.py  preprocess_df.py  supp_functions.py  visualization.py  visualizations.py
(+466 files in other folders)
