[project]
name = "mrs-digital-phantom"
version = "0.1.0"
description = "A modular framework for simulating MRS data using a digital brain phantom"
authors = [
    { name = "Dennis van de Sande", email = "d.m.j.v.d.sande@tue.nl" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appnope==0.1.4",
    "comm==0.2.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "einops==0.8.1",
    "exceptiongroup==1.3.0",
    "filelock==3.18.0",
    "humanize==4.12.3",
    "ipykernel==6.29.5",
    "ipympl==0.9.7",
    "ipython==8.37.0",
    "ipywidgets==8.1.7",
    "jedi==0.19.2",
    "joblib==1.5.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.8.1",
    "jupyterlab_widgets==3.0.15",
    "markdown-it-py==3.0.0",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "metakernel==0.30.3",
    "mpmath==1.3.0",
    "munkres==1.1.4",
    "networkx==3.4.2",
    "oct2py==5.8.0",
    "octave_kernel==0.36.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.3.8",
    "prompt_toolkit==3.0.51",
    "Pygments==2.19.2",
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.17",
    "PyQt5_sip==12.17.0",
    "pyqtgraph==0.13.7",
    "pyzmq==27.0.0",
    "retrying==1.3.4",
    "rich==14.0.0",
    "scikit-learn==1.7.0",
    "shellingham==1.5.4",
    "simpleitk==2.5.2",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.7.1",
    "torchio==0.20.15",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "wcwidth==0.2.13",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.2"
]