[project]
name = "mrs-digital-phantom"
version = "0.1.0"
description = "A modular framework for simulating MRS data using a digital brain phantom"
authors = [
    { name = "Dennis van de Sande", email = "d.m.j.v.d.sande@tue.nl" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["gui*", "simulation*", "utils*"]
exclude = ["data*", "media*", "outputs*", "notebooks*"]

[tool.pixi.project]
channels = ["conda-forge", "https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public/"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
fsl_mrs = ">=2.4.10,<3"
octave = ">=10.2.0,<11"
ipython = ">=9.4.0,<10"
jupyter_core = ">=5.8.1,<6"
pyqtgraph = ">=0.13.7,<0.14"
pytorch = ">=2.7.1,<3"
oct2py = ">=5.8.0,<6"
torchio = ">=0.20.21,<0.21"


[tool.pixi.tasks]
simulator = "python main.py"
